Actions
Bug #9811
closedNumeric#step ignores `to` silently by keyword arguments.
Bug #9811:
Numeric#step ignores `to` silently by keyword arguments.
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r45861.
numeric.c: check keyword arguments
- numeric.c (
num_step_scan_args): check keyword arguments and fail
if they conflict with positional arguments.
[ruby-dev:48177] [Bug #9811]
Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago
r45861 およびその準備の r45859, r45860 を ruby_2_1 にバックポートすると 1.step(by: 0).size が "in `size': unknown keywords: by, to (ArgumentError)" のような例外を発生させます。
rb_get_kwargs() は ID の配列を受けとりますが、Symbol の配列を渡しているためでした。trunk では rb_id2sym() が Symbol をそのまま返すため発生していませんでした。
Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago
- Backport changed from 2.0.0: DONTNEED, 2.1: REQUIRED to 2.0.0: DONTNEED, 2.1: DONE
r45858, r45859, r45860, r45861 and r46638 were backported into ruby_2_1 branch at r46661.
Actions